add toggles for mobile

--- a/Shared (App)/Base.lproj/Main.html
+++ b/Shared (App)/Base.lproj/Main.html
@@ -12,10 +12,10 @@
 <body>
     <img class="platform-mac platform-ipad app-icon" src="../Icon.png" alt='"No Distractions" for YouTube Icon'>
     <p class="platform-ios platform-ipad">This Safari extension hides distractions on YouTube. It is open source and collects zero data - you can find the source code <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube">on GitHub</a>.<br><br> To turn it on, go to Settings > Safari > Extensions, then tap on the extension and switch it on, and allow it to access youtube.com <br>
-        <img class="illustration-image-ipad" src="../extension_turn_on_ipad.png" alt="Extensions section in iOS settings">
+        <img class="illustration-image-ipad" src="../extension_turn_on_ipad.PNG" alt="Extensions section in iOS settings">
     </p>
     <p class="platform-ios platform-iphone">This Safari extension hides distractions on YouTube. It is open source and collects zero data - you can find the source code <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube">on GitHub</a>.<br><br> To turn it on, go to Settings > Safari > Extensions, then tap on the extension to switch it on and allow access to youtube.com<br>
-        <img class="iphone-illustration-image" src="../extension_turn_on_iphone.png" alt="Extensions section in iOS settings">
+        <img class="iphone-illustration-image" src="../extension_turn_on_iphone.PNG" alt="Extensions section in iOS settings">
     </p>
     <p class="platform-mac state-unknown">This extension hides distractions on YouTube.<br>
     <br>To turn it on, first toggle it on in Safari Extensions preferences. Then go to YouTube, click the extension icon in the toolbar, and allow access.
