--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -11,6 +11,10 @@
         <label class="platform-ipad-mac" for="recVidsToggle">Recommended videos (home page)</label><br class="platform-ipad-mac">
         <input class="platform-ipad-mac" type="checkbox" id="relVidsToggle" name="relVidsToggle">
         <label class="platform-ipad-mac" for="relVidsToggle">Related videos (sidebar when watching)</label><br class="platform-ipad-mac">
+        <input class="platform-iphone platform-ios" type="checkbox" id="recVidsToggleMobile" name="recVidsToggleMobile">
+        <label class="platform-iphone platform-ios" for="recVidsToggleMobile">Recommended videos (home page)</label><br class="platform-iphone platform-ios">
+        <input class="platform-iphone platform-ios" type="checkbox" id="relVidsToggleMobile" name="relVidsToggleMobile">
+        <label class="platform-iphone platform-ios" for="relVidsToggleMobile">Up next videos</label>
     </div>
     <p>'"No Distractions" for YouTube' is open source.</p>
     <p>To flag bugs or submit suggestions for improvement, visit the extension's <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub repository</a>.
