--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -11,6 +11,8 @@
         <label class="platform-ipad-mac" for="recVidsToggle">Recommended videos (home page)</label><br class="platform-ipad-mac">
         <input class="platform-ipad-mac" type="checkbox" id="relVidsToggle" name="relVidsToggle">
         <label class="platform-ipad-mac" for="relVidsToggle">Related videos (sidebar when watching)</label><br class="platform-ipad-mac">
+        <input class="platform-ipad-mac" type="checkbox" id="commentsToggle" name="commentsToggle">
+        <label class="platform-ipad-mac" for="commentsToggle">Comments</label><br class="platform-ipad-mac">
         <input class="platform-iphone platform-ios" type="checkbox" id="recVidsToggleMobile" name="recVidsToggleMobile">
         <label class="platform-iphone platform-ios" for="recVidsToggleMobile">Recommended videos (home page)</label><br class="platform-iphone platform-ios">
         <input class="platform-iphone platform-ios" type="checkbox" id="relVidsToggleMobile" name="relVidsToggleMobile">
