only show scroll note on mac and ipad

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -20,7 +20,7 @@
         <input class="platform-iphone platform-ios" type="checkbox" id="relVidsToggleMobile" name="relVidsToggleMobile">
         <label class="platform-iphone platform-ios" for="relVidsToggleMobile">Up next videos</label>
     </div>
-    <p class="smaller-font">If comments or video thumbnails don't appear immediately when you toggle them on, do a scroll and they will load.</p>
+    <p class="smaller-font platform-ipad-mac">If comments or video thumbnails don't appear immediately when you toggle them on, do a scroll and they will load.</p>
     <p class="smaller-font">To flag bugs or suggest improvements, visit the extension's <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub repository</a>.
 </body>
 </html>
