use same toggles for ipad and mac

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -7,18 +7,12 @@
 </head>
 <body>
     <div class="content-toggles">
-        <input class="platform-ipad-mac" type="checkbox" id="recVidsToggle" name="recVidsToggle">
-        <label class="platform-ipad-mac" for="recVidsToggle">Recommended videos <span class="colored-font">(home page)</span></label><br class="platform-ipad-mac">
-        <input class="platform-ipad-mac" type="checkbox" id="relVidsToggle" name="relVidsToggle">
-        <label class="platform-ipad-mac" for="relVidsToggle">Related videos <span class="colored-font">(sidebar when watching)</span></label><br class="platform-ipad-mac">
+        <input type="checkbox" id="recVidsToggle" name="recVidsToggle">
+        <label for="recVidsToggle">Recommended videos <span class="colored-font">(home page)</span></label><br class="platform-ipad-mac"><br>
+        <input type="checkbox" id="relVidsToggle" name="relVidsToggle">
+        <label for="relVidsToggle">Related/Up next videos <span class="colored-font">(when watching)</span></label><br class="platform-ipad-mac">
         <input class="platform-ipad-mac" type="checkbox" id="commentsToggle" name="commentsToggle">
-        <label class="platform-ipad-mac" for="commentsToggle">Comments</label><br class="platform-ipad-mac">
-        
-        
-        <input class="platform-iphone platform-ios" type="checkbox" id="recVidsToggleMobile" name="recVidsToggleMobile">
-        <label class="platform-iphone platform-ios" for="recVidsToggleMobile">Recommended videos (home page)</label><br class="platform-iphone platform-ios">
-        <input class="platform-iphone platform-ios" type="checkbox" id="relVidsToggleMobile" name="relVidsToggleMobile">
-        <label class="platform-iphone platform-ios" for="relVidsToggleMobile">Up next videos</label>
+        <label class="platform-ipad-mac" for="commentsToggle">Comments<span class="colored-font">(desktop and large iPads)</span></label>
     </div>
     <p class="smaller-font platform-ipad-mac">If comments or video thumbnails don't appear immediately when you toggle them on, do a scroll and they will load.</p>
     <p class="smaller-font">To flag bugs or suggest improvements, visit the extension's <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub repository</a>.
