rm device scoping at comments

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -12,7 +12,7 @@
         <input type="checkbox" id="relVidsToggle" name="relVidsToggle">
         <label for="relVidsToggle">Related/Up next videos <span class="colored-font">(when watching)</span></label><br class="platform-ipad-mac">
         <input class="platform-ipad-mac" type="checkbox" id="commentsToggle" name="commentsToggle">
-        <label class="platform-ipad-mac" for="commentsToggle">Comments<span class="colored-font">(desktop and large iPads)</span></label>
+        <label class="platform-ipad-mac" for="commentsToggle">Comments</label>
     </div>
     <p class="smaller-font platform-ipad-mac">If comments or video thumbnails don't appear immediately when you toggle them on, do a scroll and they will load.</p>
     <p class="smaller-font">To flag bugs or suggest improvements, visit the extension's <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub repository</a>.
