hide the Shorts button by default and add toggle for it in the popup

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -9,6 +9,8 @@
     <div class="content-toggles">
         <input type="checkbox" id="recVidsToggle" name="recVidsToggle">
         <label for="recVidsToggle">Recommended videos <span class="colored-font">(home page)</span></label><br class="platform-ipad-mac"><br>
+        <input type="checkbox" id="shortsToggle" name="shortsToggle">
+        <label for="shortsToggle">Shorts <span class="colored-font">(home page)</span></label><br class="platform-ipad-mac"><br>
         <input type="checkbox" id="relVidsToggle" name="relVidsToggle">
         <label for="relVidsToggle">Related/Up next videos <span class="colored-font">(when watching)</span></label><br class="platform-ipad-mac">
         <input class="platform-ipad-mac" type="checkbox" id="commentsToggle" name="commentsToggle">
