simplify use instructions on iPhone

--- a/Shared (App)/Base.lproj/Main.html
+++ b/Shared (App)/Base.lproj/Main.html
@@ -13,9 +13,9 @@
     <img class="platform-mac app-icon" src="../Icon.png" alt='"No Distractions" for YouTube Icon'>
     
     <p class="platform-ios platform-iphone">This Safari extension hides distractions on YouTube. It is open source and collects zero data - you can find the source code <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube">on GitHub</a>.</p>
-    <p class="platform-ios platform-iphone">To turn it on, first open Safari and go to youtube.com.<br>
-    Then, in the toolbar tap 'Aa' -> 'Manage Extensions', and toggle the extension on (<i>Step 1</i>).<br>
-    Afterwards, tap the extension and allow it to access youtube.com (<i>Step 2</i>)
+    <p class="platform-ios platform-iphone">To turn it on, open Safari and go to youtube.com. Then:<br>
+    1) In the toolbar tap 'Aa' -> 'Manage Extensions', and toggle the extension on.<br>
+    2) Tap the extension and allow it to access youtube.com
     </p>
     <div class="row platform-ios platform-iphone">
       <div class="column">
