enable shorts hiding on mobile

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -11,7 +11,7 @@
             <input type="checkbox" id="recVidsToggle" name="recVidsToggle">
             <label for="recVidsToggle">Recommended videos <span class="colored-font">(home page)</span></label>
         </div>
-        <div class="a-toggle platform-ipad-mac">
+        <div class="a-toggle">
             <input type="checkbox" id="shortsToggle" name="shortsToggle">
             <label for="shortsToggle">Shorts <span class="colored-font">(home page)</span></label>
         </div>
