--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -15,7 +15,7 @@
             <input type="checkbox" id="shortsToggle" name="shortsToggle">
             <label for="shortsToggle">Shorts <span class="colored-font">(home page)</span></label>
         </div>
-        <div class="a-toggle platform-ipad-mac">
+        <div class="a-toggle">
             <input type="checkbox" id="relVidsToggle" name="relVidsToggle">
             <label for="relVidsToggle">Related/Up next videos <span class="colored-font">(when watching)</span></label>
         </div>
