--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -16,8 +16,8 @@
             <label for="shortsToggle">Shorts <span class="colored-font">(home page)</span></label>
         </div>
         <div class="a-toggle">
-            <input type="checkbox" id="relVidsToggle" name="relVidsToggle">
-            <label for="relVidsToggle">Related/Up next videos <span class="colored-font">(when watching)</span></label>
+            <input type="checkbox" id="relatedToggle" name="relatedToggle">
+            <label for="relatedToggle">Related/Up next videos <span class="colored-font">(when watching)</span></label>
         </div>
         <div class="a-toggle platform-ipad-mac comments-toggle-wrapper">
             <input class="platform-ipad-mac" type="checkbox" id="commentsToggle" name="commentsToggle">
@@ -26,8 +26,8 @@
         <div class="smaller-font platform-ipad-mac tooltip-content"><p class="colored-font">If comments or video thumbnails don't appear immediately when you toggle them on, do a scroll and they will load.</p></div>
         
     </div>
-    <p>
     <p class="smaller-font">To flag bugs or suggest improvements, visit the extension's <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub repository</a>.
     </p>
+    <button id="saveButton">Save settings</button>    
 </body>
 </html>
