--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -23,7 +23,7 @@
             <input class="platform-ipad-mac" type="checkbox" id="commentsToggle" name="commentsToggle">
             <label class="platform-ipad-mac" for="commentsToggle">Comments</label>
         </div>
-        <div class="smaller-font platform-ipad-mac tooltip-content"><p class="colored-font">If comments or video thumbnails don't appear immediately when you toggle them on, do a scroll and they will load.</p></div>
+        <div class="smaller-font platform-ipad-mac tooltip-content"></div>
         
     </div>
     <p class="smaller-font">To flag bugs or suggest improvements, visit the extension's <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub repository</a>.
