show the comments checkbox on iPhone; hide the explore and more from youtube checkboxes

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -22,12 +22,12 @@
               <label for="subscriptionsToggle">Subscriptions</label>
           </div>
           <div class="a-toggle">
-              <input type="checkbox" id="exploreToggle" name="exploreToggle">
-              <label for="exploreToggle">Explore</label>
+              <input class="platform-ipad-mac" type="checkbox" id="exploreToggle" name="exploreToggle">
+              <label class="platform-ipad-mac" for="exploreToggle">Explore</label>
           </div>
           <div class="a-toggle">
-              <input type="checkbox" id="moreToggle" name="moreToggle">
-              <label for="moreToggle">More from YouTube</label>
+              <input class="platform-ipad-mac" type="checkbox" id="moreToggle" name="moreToggle">
+              <label  class="platform-ipad-mac" for="moreToggle">More from YouTube</label>
           </div>
         </div>
         <div class="toggle-group">
@@ -36,9 +36,9 @@
                 <input type="checkbox" id="relatedToggle" name="relatedToggle">
                 <label for="relatedToggle">Related/Up next videos</label>
             </div>
-            <div class="a-toggle platform-ipad-mac comments-toggle-wrapper">
-                <input class="platform-ipad-mac" type="checkbox" id="commentsToggle" name="commentsToggle">
-                <label class="platform-ipad-mac" for="commentsToggle">Comments</label>
+            <div class="a-toggle">
+                <input type="checkbox" id="commentsToggle" name="commentsToggle">
+                <label for="commentsToggle">Comments</label>
             </div>
             <div class="smaller-font platform-ipad-mac tooltip-content"></div>
         </div>
