more accurate subscriptions selector

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -21,13 +21,13 @@
               <input type="checkbox" id="subscriptionsToggle" name="subscriptionsToggle">
               <label for="subscriptionsToggle">Subscriptions</label>
           </div>
-          <div class="a-toggle">
-              <input class="platform-ipad-mac" type="checkbox" id="exploreToggle" name="exploreToggle">
-              <label class="platform-ipad-mac" for="exploreToggle">Explore</label>
+          <div class="a-toggle platform-ipad-mac">
+              <input type="checkbox" id="exploreToggle" name="exploreToggle">
+              <label for="exploreToggle">Explore</label>
           </div>
-          <div class="a-toggle">
-              <input class="platform-ipad-mac" type="checkbox" id="moreToggle" name="moreToggle">
-              <label  class="platform-ipad-mac" for="moreToggle">More from YouTube</label>
+          <div class="a-toggle platform-ipad-mac">
+              <input type="checkbox" id="moreToggle" name="moreToggle">
+              <label for="moreToggle">More from YouTube</label>
           </div>
         </div>
         <div class="toggle-group">
