bring styling in line with mindshield

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -40,11 +40,12 @@
                 <input type="checkbox" id="commentsToggle" name="commentsToggle">
                 <label for="commentsToggle">Comments</label>
             </div>
-            <div class="smaller-font platform-ipad-mac tooltip-content"></div>
+        </div>
+        <div class="save-toggle">
+            <input type="button" id="saveButton" value="Save settings">
         </div>
     </div>
     <p class="smaller-font">To flag bugs or suggest improvements, visit the extension's <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub repository</a>.
     </p>
-    <button id="saveButton">Save settings</button>
 </body>
 </html>
