--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -10,35 +10,35 @@
         <div class="toggle-group">
           <h2>Home page</h2>
           <div class="a-toggle">
-              <input type="checkbox" id="recVidsToggle" name="recVidsToggle">
-              <label for="recVidsToggle">Recommended videos</label>
+              <input type="checkbox" id="youtubeRecVidsToggle" name="youtubeRecVidsToggle">
+              <label for="youtubeRecVidsToggle">Recommended videos</label>
           </div>
           <div class="a-toggle">
-              <input type="checkbox" id="shortsToggle" name="shortsToggle">
-              <label for="shortsToggle">Shorts</label>
+              <input type="checkbox" id="youtubeShortsToggle" name="youtubeShortsToggle">
+              <label for="youtubeShortsToggle">Shorts</label>
           </div>
           <div class="a-toggle">
-              <input type="checkbox" id="subscriptionsToggle" name="subscriptionsToggle">
-              <label for="subscriptionsToggle">Subscriptions</label>
+              <input type="checkbox" id="youtubeSubscriptionsToggle" name="youtubeSubscriptionsToggle">
+              <label for="youtubeSubscriptionsToggle">Subscriptions</label>
           </div>
           <div class="a-toggle platform-ipad-mac">
-              <input type="checkbox" id="exploreToggle" name="exploreToggle">
-              <label for="exploreToggle">Explore</label>
+              <input type="checkbox" id="youtubeExploreToggle" name="youtubeExploreToggle">
+              <label for="youtubeExploreToggle">Explore</label>
           </div>
           <div class="a-toggle platform-ipad-mac">
-              <input type="checkbox" id="moreToggle" name="moreToggle">
-              <label for="moreToggle">More from YouTube</label>
+              <input type="checkbox" id="youtubeMoreToggle" name="youtubeMoreToggle">
+              <label for="youtubeMoreToggle">More from YouTube</label>
           </div>
         </div>
         <div class="toggle-group">
             <h2>When watching</h2>
             <div class="a-toggle">
-                <input type="checkbox" id="relatedToggle" name="relatedToggle">
-                <label for="relatedToggle">Related/Up next videos</label>
+                <input type="checkbox" id="youtubeRelatedToggle" name="youtubeRelatedToggle">
+                <label for="youtubeRelatedToggle">Related/Up next videos</label>
             </div>
             <div class="a-toggle">
-                <input type="checkbox" id="commentsToggle" name="commentsToggle">
-                <label for="commentsToggle">Comments</label>
+                <input type="checkbox" id="youtubeCommentsToggle" name="youtubeCommentsToggle">
+                <label for="youtubeCommentsToggle">Comments</label>
             </div>
         </div>
         <div class="save-toggle">
