use prohibition symbols for checkboxes to make meaning unambiguous & improve styling

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -45,7 +45,7 @@
             <input type="button" id="saveButton" value="Save settings">
         </div>
     </div>
-    <p class="smaller-font">To flag bugs or suggest improvements, visit the extension's <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub repository</a>.
+    <p class="smaller-font">To flag bugs or suggest improvements, visit the <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub repository</a>.
     </p>
 </body>
 </html>
