add link to get it on more sites

--- a/Shared (App)/Base.lproj/Main.html
+++ b/Shared (App)/Base.lproj/Main.html
@@ -12,7 +12,7 @@
 <body>
     <img class="platform-mac app-icon" src="../Icon.png" alt='"No Distractions" for YouTube Icon'>
     
-    <p class="platform-ios platform-iphone">This Safari extension hides distractions on YouTube. It is open source and collects zero data - you can find the source code <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube">on GitHub</a>.</p>
+    <p class="platform-ios platform-iphone">This Safari extension hides distractions on YouTube (if you need it on more sites, go <a href="https://apps.apple.com/gb/app/mindshield/id1660218371">here</a>). The extension is open source and collects zero data - you can see the source code <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube">on GitHub</a>. </p>
     <p class="platform-ios platform-iphone">To turn it on, open Safari and go to youtube.com. Then:<br>
     1) In the toolbar tap 'Aa' -> 'Manage Extensions', and toggle the extension on.<br>
     2) Tap the extension and allow it to access youtube.com
@@ -20,11 +20,11 @@
     <div class="row platform-ios platform-iphone">
       <div class="column">
         <p>Step 1:</p>
-        <img src="../iphone_manage_extensions.png" alt="Snow" style="width:100%">
+        <img src="../iphone_manage_extensions.png" style="width:100%">
       </div>
       <div class="column">
         <p>Step 2:</p>
-        <img src="../iphone_allow_access.png" alt="Mountains" style="width:100%">
+        <img src="../iphone_allow_access.png" style="width:100%">
       </div>
     </div>
     
