--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -21,6 +21,10 @@
               <input type="checkbox" id="youtubeSubscriptionsToggle" name="youtubeSubscriptionsToggle">
               <label for="youtubeSubscriptionsToggle">Subscriptions</label>
           </div>
+          <div class="a-toggle">
+              <input type="checkbox" id="youtubeLibraryToggle" name="youtubeLibraryToggle">
+              <label for="youtubeLibraryToggle">Library</label>
+          </div>
           <div class="a-toggle platform-ipad-mac">
               <input type="checkbox" id="youtubeExploreToggle" name="youtubeExploreToggle">
               <label for="youtubeExploreToggle">Explore</label>
