add option to hide search history

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -26,6 +26,10 @@
               <label for="youtubeLibraryToggle">Library</label>
           </div>
           <div class="a-toggle platform-ipad-mac">
+              <input type="checkbox" id="youtubeHistoryToggle" name="youtubeHistoryToggle">
+              <label for="youtubeHistoryToggle">History</label>
+          </div>
+          <div class="a-toggle platform-ipad-mac">
               <input type="checkbox" id="youtubeExploreToggle" name="youtubeExploreToggle">
               <label for="youtubeExploreToggle">Explore</label>
           </div>
