add ability to hide thumbnails

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -49,6 +49,13 @@
                 <label for="youtubeCommentsToggle">Comments</label>
             </div>
         </div>
+        <div class="toggle-group">
+            <h2>General</h2>
+            <div class="a-toggle">
+                  <input type="checkbox" id="youtubeThumbnailsToggle" name="youtubeThumbnailsToggle">
+                  <label for="youtubeThumbnailsToggle">Thumbnails</label>
+              </div>
+        </div>
         <div class="save-toggle">
             <input type="button" id="saveButton" value="Save settings">
         </div>
