add optional delay to show the settings page

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -6,61 +6,83 @@
     <script type="module" src="popup.js"></script>
 </head>
 <body>
-    <div class="content-toggles">
-        <div class="toggle-group">
-          <h2>Home page</h2>
-          <div class="a-toggle">
-              <input type="checkbox" id="youtubeRecVidsToggle" name="youtubeRecVidsToggle">
-              <label for="youtubeRecVidsToggle">Recommended videos</label>
-          </div>
-          <div class="a-toggle">
-              <input type="checkbox" id="youtubeShortsToggle" name="youtubeShortsToggle">
-              <label for="youtubeShortsToggle">Shorts</label>
-          </div>
-          <div class="a-toggle">
-              <input type="checkbox" id="youtubeSubscriptionsToggle" name="youtubeSubscriptionsToggle">
-              <label for="youtubeSubscriptionsToggle">Subscriptions</label>
-          </div>
-          <div class="a-toggle">
-              <input type="checkbox" id="youtubeLibraryToggle" name="youtubeLibraryToggle">
-              <label for="youtubeLibraryToggle">Library</label>
-          </div>
-          <div class="a-toggle platform-ipad-mac">
-              <input type="checkbox" id="youtubeHistoryToggle" name="youtubeHistoryToggle">
-              <label for="youtubeHistoryToggle">History</label>
-          </div>
-          <div class="a-toggle platform-ipad-mac">
-              <input type="checkbox" id="youtubeExploreToggle" name="youtubeExploreToggle">
-              <label for="youtubeExploreToggle">Explore</label>
-          </div>
-          <div class="a-toggle platform-ipad-mac">
-              <input type="checkbox" id="youtubeMoreToggle" name="youtubeMoreToggle">
-              <label for="youtubeMoreToggle">More from YouTube</label>
-          </div>
-        </div>
-        <div class="toggle-group">
-            <h2>When watching</h2>
-            <div class="a-toggle">
-                <input type="checkbox" id="youtubeRelatedToggle" name="youtubeRelatedToggle">
-                <label for="youtubeRelatedToggle">Related/Up next videos</label>
-            </div>
-            <div class="a-toggle">
-                <input type="checkbox" id="youtubeCommentsToggle" name="youtubeCommentsToggle">
-                <label for="youtubeCommentsToggle">Comments</label>
-            </div>
-        </div>
-        <div class="toggle-group">
-            <h2>General</h2>
-            <div class="a-toggle">
-                  <input type="checkbox" id="youtubeThumbnailsToggle" name="youtubeThumbnailsToggle">
-                  <label for="youtubeThumbnailsToggle">Thumbnails</label>
-              </div>
-        </div>
-        <div class="save-toggle">
-            <input type="button" id="saveButton" value="Save settings">
-        </div>
+    <div id="delay-content" style="display: none;">
+        <p id="delay-message"></p>
+        <img src="/images/calm.png" class="breathing"/>
+        <p class="delay-time-wrapper"><span id="delay-time"></span></p>
     </div>
-    <p class="smaller-font">To flag bugs or suggest improvements, go to <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub</a>.
-    </p>
+    <div id="popup-content" style="display: none;">
+        <div class="content-toggles">
+            <div class="toggle-group hide-checkboxes">
+              <h2>Home page</h2>
+              <div class="a-toggle">
+                  <input type="checkbox" id="youtubeRecVidsToggle" name="youtubeRecVidsToggle">
+                  <label for="youtubeRecVidsToggle">Recommended videos</label>
+              </div>
+              <div class="a-toggle">
+                  <input type="checkbox" id="youtubeShortsToggle" name="youtubeShortsToggle">
+                  <label for="youtubeShortsToggle">Shorts</label>
+              </div>
+              <div class="a-toggle">
+                  <input type="checkbox" id="youtubeSubscriptionsToggle" name="youtubeSubscriptionsToggle">
+                  <label for="youtubeSubscriptionsToggle">Subscriptions</label>
+              </div>
+              <div class="a-toggle">
+                  <input type="checkbox" id="youtubeLibraryToggle" name="youtubeLibraryToggle">
+                  <label for="youtubeLibraryToggle">Library</label>
+              </div>
+              <div class="a-toggle platform-ipad-mac">
+                  <input type="checkbox" id="youtubeHistoryToggle" name="youtubeHistoryToggle">
+                  <label for="youtubeHistoryToggle">History</label>
+              </div>
+              <div class="a-toggle platform-ipad-mac">
+                  <input type="checkbox" id="youtubeExploreToggle" name="youtubeExploreToggle">
+                  <label for="youtubeExploreToggle">Explore</label>
+              </div>
+              <div class="a-toggle platform-ipad-mac">
+                  <input type="checkbox" id="youtubeMoreToggle" name="youtubeMoreToggle">
+                  <label for="youtubeMoreToggle">More from YouTube</label>
+              </div>
+            </div>
+            <div class="toggle-group hide-checkboxes">
+                <h2>When watching</h2>
+                <div class="a-toggle">
+                    <input type="checkbox" id="youtubeRelatedToggle" name="youtubeRelatedToggle">
+                    <label for="youtubeRelatedToggle">Related/Up next videos</label>
+                </div>
+                <div class="a-toggle">
+                    <input type="checkbox" id="youtubeCommentsToggle" name="youtubeCommentsToggle">
+                    <label for="youtubeCommentsToggle">Comments</label>
+                </div>
+            </div>
+            <div class="toggle-group hide-checkboxes">
+                <h2>General</h2>
+                <div class="a-toggle">
+                      <input class="hide-checkbox" type="checkbox" id="youtubeThumbnailsToggle" name="youtubeThumbnailsToggle">
+                      <label for="youtubeThumbnailsToggle">Thumbnails</label>
+                  </div>
+            </div>
+            <div class="toggle-group">
+                <h2>Friction</h2>
+                <div class="a-toggle friction-toggle">
+                      <input type="checkbox" id="frictionToggle" name="frictionToggle">
+                      <label for="frictionToggle">Delay to see settings</label>
+                  </div>
+                <div class="a-toggle friction-customisation">
+                      <input type="number" id="waitTime" name="waitTime" placeholder="10">
+                      <label for="waitTime">Wait time (seconds)</label>
+                  </div>
+                <div class="a-toggle friction-customisation">
+                      <input type="text" id="waitText" name="waitText" placeholder="What's your intention?">
+                      <label for="waitText">Message to show</label>
+                  </div>
+            </div>
+            <div class="save-toggle">
+                <input type="button" id="saveButton" value="Save settings">
+            </div>
+        </div>
+        <p class="smaller-font">To flag bugs or suggest improvements, go to <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube" target="_blank">GitHub</a>.
+        </p>
+    </div>
 </body>
 </html>
