--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -8,7 +8,7 @@
 <body>
     <div id="delay-content" style="display: none;">
         <p id="delay-message"></p>
-        <img src="/images/calm.png" class="breathing"/>
+        <img src="/images/calm.svg" class="breathing"/>
         <p class="delay-time-wrapper"><span id="delay-time"></span></p>
     </div>
     <div id="popup-content" style="display: none;">
