set the value rather than the placeholder for the delay customisation

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -69,11 +69,11 @@
                       <label for="frictionToggle">Delay to see settings</label>
                   </div>
                 <div class="a-toggle friction-customisation">
-                      <input type="number" id="waitTime" name="waitTime" placeholder="10">
+                      <input type="number" id="waitTime" name="waitTime" value="10">
                       <label for="waitTime">Wait time (seconds)</label>
                   </div>
                 <div class="a-toggle friction-customisation">
-                      <input type="text" id="waitText" name="waitText" placeholder="What's your intention?">
+                      <input type="text" id="waitText" name="waitText" value="What's your intention?">
                       <label for="waitText">Message to show</label>
                   </div>
             </div>
