allow #secondary there so that timestamps in the right side remains; add search and account profile pic hiding; let default be that things are shown unless toggled off

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -22,6 +22,10 @@
                   <p id="how-to-description" style="display: none;">Tap your account image > Settings > Account > untick 'Video previews'</p>
               </div>
               <div class="a-toggle">
+                  <input type="checkbox" id="youtubeSearchToggle" name="youtubeSearchToggle">
+                      <label for="youtubeSearchToggle">Search box</label>
+              </div>
+              <div class="a-toggle">
                   <input type="checkbox" id="youtubeRecVidsToggle" name="youtubeRecVidsToggle">
                   <label for="youtubeRecVidsToggle">Recommended videos</label>
               </div>
@@ -67,6 +71,10 @@
                       <input class="hide-checkbox" type="checkbox" id="youtubeThumbnailsToggle" name="youtubeThumbnailsToggle">
                       <label for="youtubeThumbnailsToggle">Thumbnails</label>
                   </div>
+                <div class="a-toggle">
+                    <input class="hide-checkbox" type="checkbox" id="youtubeProfileImgToggle" name="youtubeProfileImgToggle">
+                        <label for="youtubeProfileImgToggle">Account images</label>
+                </div>
             </div>
             <div class="save-toggle">
                 <input type="button" id="saveButton" value="Save settings">
