--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -85,12 +85,14 @@
                       <label for="frictionToggle">Delay to change settings</label>
                   </div>
                 <div class="a-toggle friction-customisation">
-                      <input type="number" id="waitTime" name="waitTime" value="10" max="15">
-                      <label for="waitTime">Wait time (seconds)</label>
+                      <input type="number" id="waitTime" name="waitTime" value="10" min="1" max="600">
+                      <label for="waitTime"> Wait time (seconds)</label>
+                      <p id="savedTextTime" style="display: none;">Saved!</p>
                   </div>
                 <div class="a-toggle friction-customisation">
                       <input type="text" id="waitText" name="waitText" value="What's your intention?">
-                      <label for="waitText">Message</label>
+                      <label for="waitText"> Message</label>
+                      <p id="savedTextText" style="display: none;">Saved!</p>
                   </div>
             </div>
         </div>
