update images used

--- a/Shared (App)/Base.lproj/Main.html
+++ b/Shared (App)/Base.lproj/Main.html
@@ -20,11 +20,11 @@
     <div class="row platform-ios platform-iphone">
       <div class="column">
         <p>Step 1:</p>
-        <img src="../iphone_manage_extensions.png" style="width:100%">
+        <img src="../iphone_manage_extensions.jpg" style="width:100%">
       </div>
       <div class="column">
         <p>Step 2:</p>
-        <img src="../iphone_allow_access.png" style="width:100%">
+        <img src="../iphone_allow_access.jpg" style="width:100%">
       </div>
     </div>
     
