only update the time and the message when you press the save button

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -87,12 +87,11 @@
                 <div class="a-toggle friction-customisation">
                       <input type="number" id="waitTime" name="waitTime" value="10" min="1" max="600">
                       <label for="waitTime"> Wait time (seconds)</label>
-                      <p id="savedTextTime" style="display: none;">Saved!</p>
+                      <p id="savedTextTime" style="display: none; color: red;"></p>
                   </div>
                 <div class="a-toggle friction-customisation">
                       <input type="text" id="waitText" name="waitText" value="What's your intention?">
                       <label for="waitText"> Message</label>
-                      <p id="savedTextText" style="display: none;">Saved!</p>
                   </div>
             </div>
         </div>
