add checkbox to hide or show ads

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -75,6 +75,10 @@
                     <input class="hide-checkbox" type="checkbox" id="youtubeProfileImgToggle" name="youtubeProfileImgToggle">
                         <label for="youtubeProfileImgToggle">Account images</label>
                 </div>
+                <div class="a-toggle">
+                    <input class="hide-checkbox" type="checkbox" id="youtubeAdsToggle" name="youtubeAdsToggle">
+                        <label for="youtubeAdsToggle">Ads</label>
+                </div>
             </div>
             <div class="save-toggle">
                 <input type="button" id="saveButton" value="Save settings">
