--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -16,9 +16,17 @@
             <div class="toggle-group hide-checkboxes">
               <h2>Home page</h2>
               <div class="a-toggle platform-iphone" id="hide-previews">
-                  <img src="/images/how-to.svg" id="how-to-image"/>
+                  <div id="how-to-arrow-right" style="display: inline-block;">
+                      <svg width="12px" height="12px" version="1.1" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg">
+                       <path d="m360 1170-90-91.199 478.8-478.8-478.8-478.8 90-91.199 570 570z"/>
+                      </svg>
+                  </div>
+                  <div id="how-to-arrow-down" style="display: none;">
+                      <svg width="12px" height="12px" version="1.1" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg">
+                       <path d="m652.1 915.27 526.35-524.55c28.742-30.539 28.742-77.246 0-105.99-28.742-28.742-77.246-28.742-105.99 0l-472.46 472.46-472.46-472.46c-30.539-28.742-77.246-28.742-105.99 0-28.742 28.742-28.742 75.449 0 105.99l524.55 524.55c30.539 28.742 77.246 28.742 105.99 0z" fill-rule="evenodd"/>
+                      </svg>
+                  </div>
                   <p class="previews-text">Auto-playing previews</p>
-                  <img src="/images/down-arrow.svg" id="how-to-arrow" style="display: none;"/>
                   <p id="how-to-description" style="display: none;">Tap your account image > Settings > Account > untick 'Video previews'</p>
               </div>
               <div class="a-toggle">
